# py-sls-audit

./: README.rst  pyproject.toml
py_sls_audit/: cli.py  common.py  gui.py
tests/: test_py_sls_audit.py
