[tool.poetry]
name = "py-sls-audit"
version = "0.1.0"
description = "CLI tool to monitor and audit lambdas"
authors = ["Jacek Nosal <jacek.nosal@outlook.com>"]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-mock = "^3.3.1"
black = "^20.8b1"
flake8 = "^3.8.4"

[tool.poetry.scripts]
py-sls-audit = 'py_sls_audit.cli:run'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
